radio-checkbox add

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </p>
       </div>
       <div class="form-container">
-        <form action="" class="form-cntr">
+        <form action="" method="get" class="form-cntr">
           <div class="name-cnt">
             <label class="label-cnt" for="name">Name</label>
             <br />
@@ -78,25 +78,25 @@
           <div class="orta1-cnt">
             <label for="movie">Movie Type</label>
             <br />
-            <input type="checkbox" name="comedy" id="comedy" checked />
+            <input type="checkbox" name="movie" id="comedy" checked />
             <label for="comedy">Comedy</label>
             <br />
-            <input type="checkbox" name="action" id="action" />
+            <input type="checkbox" name="movie" id="action" />
             <label for="action">Action</label>
             <br />
-            <input type="checkbox" name="romantic" id="romantic" checked />
+            <input type="checkbox" name="movie" id="romantic" checked />
             <label for="romantic">Romantic</label>
           </div>
           <div class="orta2-cnt">
             <label for="gender">Gender</label>
             <br />
-            <input type="radio" name="male" id="male" />
+            <input type="radio" name="gender" id="male" value="Male" />
             <label for="male">Male</label>
             <br />
-            <input type="radio" name="female" id="female" checked />
+            <input type="radio" name="gender" id="female" value="Female" />
             <label for="female">Female</label>
             <br />
-            <input type="radio" name="other" id="other" />
+            <input type="radio" name="gender" id="other" value="Other" />
             <label for="other">Other</label>
           </div>
           <div class="name-cnt">
